# credit_risk_model

./: .gitignore  Dockerfile  MLProject  README.md  conda.yaml  fastapi_app.py  flask_app.py  model_building.ipynb  pyproject.toml  streamlit_app.py
credit_risk_model/: FE_pipeline.py  config.py  data_processor.py  mlflow-serve.py  plotting.py  predict.py  train.py  tune_threshold.py
credit_risk_model/mlruns/0/: meta.yaml
credit_risk_model/mlruns/245915887329367978/: meta.yaml
credit_risk_model/trained_models/: XGB_model.pkl  target_pipeline.pkl
mlruns/0/: meta.yaml
mlruns/0/025278cb8f284b06a0e5de6f9bd80002/: meta.yaml
mlruns/0/496660143abc4cfb9439aef1b5e60846/: meta.yaml
mlruns/0/84bd4b7381f2478985d603aa3647b998/: meta.yaml
mlruns/0/d6481dfcc62041638f210197e14fc020/: meta.yaml
mlruns/0/eab24657a97c4f20ad56261b7934949b/: meta.yaml
mlruns/849708934095807959/: meta.yaml
mlruns/849708934095807959/003a4599c35e48f0acd7bc3218436afc/: meta.yaml
mlruns/849708934095807959/042a240b2c2a4208bf9fc49e666db24f/: meta.yaml
mlruns/849708934095807959/0462a12605454c2f8903ec6e6849eeb8/: meta.yaml
mlruns/849708934095807959/04635f09c6074c9694c0f2b0efb09ba4/: meta.yaml
mlruns/849708934095807959/0466b3061f7e4995b41de9cd2835160f/: meta.yaml
mlruns/849708934095807959/074e0bde66314244bb90a44f4237b10c/: meta.yaml
mlruns/849708934095807959/089ca024d6bc47d7ab49553107eb5490/: meta.yaml
mlruns/849708934095807959/0a3f746cab4a45479852f65754fefbac/: meta.yaml
mlruns/870316248162147283/: meta.yaml
notebooks/: model_prototyping.ipynb
templates/: home.html
(+1265 files in other folders)
