[tool.poetry]
name = "credit-risk-model"
version = "0.1.0"
description = ""
authors = ["gvsreekar <80467534+gvsreekar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.3"
numpy = "<2.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
category-encoders = "^2.6.4"
ydata-profiling = "^4.10.0"
pytest = "^8.3.3"
xgboost = "^2.1.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
joblib = "^1.4.2"
dill = "^0.3.9"
optuna = "^4.0.0"
plotly = "^5.24.1"
mlflow = "^2.17.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
